Implement serialization of servers