@@ -4,18 +4,23 @@ import java.io.File;
 import java.lang.ProcessBuilder.Redirect;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
+import com.fasterxml.jackson.annotation.JsonTypeInfo;
+import com.fasterxml.jackson.annotation.JsonTypeInfo.As;
+import com.fasterxml.jackson.annotation.JsonTypeInfo.Id;
+@JsonTypeInfo(use=Id.CLASS, include=As.PROPERTY, property="class")
 public class ObservedServer {
 
     private String name;
     private String minMemory;
     private String maxMemory;
-    private Optional<File> java7File = Optional.empty();
-    private Optional<String> permGenSize = Optional.empty();
 
     private File directory;
     private File serverFile;
+    
+    protected ObservedServer() {
+        // For serialization
+    }
 
     public ObservedServer(String name, File serverFile, String minMemory, String maxMemory) {
         this.name = name;
@@ -25,15 +30,11 @@ public class ObservedServer {
         this.maxMemory = maxMemory;
     }
 
-    public ObservedServer(String name, File serverFile, String minMemory, String maxMemory, File java7File, String permGenSize) {
-        this(name, serverFile, minMemory, maxMemory);
-        this.java7File = Optional.of(java7File);
-        this.permGenSize = Optional.of(permGenSize);
-    }
-
     public ProcessBuilder createProcess() throws Exception {
 
-        List<String> commands = buildCommands();
+        
+        List<String> commands = new ArrayList<>();
+        buildCommands(commands);
         ProcessBuilder pBuilder = new ProcessBuilder(commands);
         pBuilder.directory(directory);
         pBuilder.redirectOutput(Redirect.PIPE);
@@ -41,21 +42,14 @@ public class ObservedServer {
         return pBuilder;
     }
 
-    private List<String> buildCommands() {
-        List<String> processCommands = new ArrayList<>();
-        if (java7File.isPresent()) {
-            processCommands.add(java7File.get().getAbsolutePath());
-            processCommands.add("-XX:MaxPermSize=" + permGenSize.get());
-        } else {
-            processCommands.add("java");
-        }
+    protected void buildCommands(List<String> processCommands) {
+
+        processCommands.add("java");
         processCommands.add("-Xms" + minMemory);
         processCommands.add("-Xmx" + maxMemory);
         processCommands.add("-jar");
         processCommands.add(serverFile.getAbsolutePath());
         processCommands.add("nogui");
-
-        return processCommands;
     }
 
     public String getName() {
@@ -70,14 +64,6 @@ public class ObservedServer {
         return maxMemory;
     }
 
-    public Optional<File> getJava7File() {
-        return java7File;
-    }
-
-    public Optional<String> getPermGenSize() {
-        return permGenSize;
-    }
-
     public File getDirectory() {
         return directory;
     }
@@ -88,7 +74,7 @@ public class ObservedServer {
 
     @Override
     public String toString() {
-        return "ObservedServer [name=" + name + ", minMemory=" + minMemory + ", maxMemory=" + maxMemory + ", java7File=" + java7File + ", permGenSize=" + permGenSize + ", directory=" + directory + ", serverFile=" + serverFile + "]";
+        return "ObservedServer [name=" + name + ", minMemory=" + minMemory + ", maxMemory=" + maxMemory + ", directory=" + directory + ", serverFile=" + serverFile + "]";
     }
 
 }
